Update FAQs to prevent unwanted column spacing

--- a/src/components/FAQ.css
+++ b/src/components/FAQ.css
@@ -27,13 +27,16 @@
 }
 .faq-items-container{
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
   align-items: flex-start;
 }
-.faq-item-container{
-  flex:0 0 1;
+.faq-items-container-col{
+  display: flex;
+  flex-direction: column;
   width:50%;
+}
+.faq-item-container{
+  flex:1;
   box-sizing: border-box;
   padding-right: 20px;
 }
